--- a/WhatFlower/Base.lproj/Main.storyboard
+++ b/WhatFlower/Base.lproj/Main.storyboard
@@ -16,27 +16,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QK3-dv-9vC">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="bZY-Uv-5h9">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QK3-dv-9vC">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="387"/>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KjM-yB-6m8">
+                                        <rect key="frame" x="0.0" y="387" width="414" height="387"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="fmC-k2-yJF">
+                                                <rect key="frame" x="8" y="8" width="398" height="371"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="fmC-k2-yJF" firstAttribute="leading" secondItem="KjM-yB-6m8" secondAttribute="leading" constant="8" id="JFF-ae-Zmg"/>
+                                            <constraint firstItem="fmC-k2-yJF" firstAttribute="top" secondItem="KjM-yB-6m8" secondAttribute="top" constant="8" id="L6l-w4-nPJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="fmC-k2-yJF" secondAttribute="trailing" constant="8" id="T83-JL-q7C"/>
+                                            <constraint firstAttribute="bottom" secondItem="fmC-k2-yJF" secondAttribute="bottom" constant="8" id="mkT-Dr-xfE"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="QK3-dv-9vC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="7Rn-s5-GkN"/>
-                            <constraint firstAttribute="bottom" secondItem="QK3-dv-9vC" secondAttribute="bottom" id="ccK-iG-bcr"/>
-                            <constraint firstItem="QK3-dv-9vC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="iIf-P3-W1M"/>
-                            <constraint firstAttribute="trailing" secondItem="QK3-dv-9vC" secondAttribute="trailing" id="mG3-PV-5hJ"/>
+                            <constraint firstItem="bZY-Uv-5h9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="9fF-vu-geW"/>
+                            <constraint firstAttribute="trailing" secondItem="bZY-Uv-5h9" secondAttribute="trailing" id="AOS-gK-Bfn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bZY-Uv-5h9" secondAttribute="bottom" id="C5D-y2-aOM"/>
+                            <constraint firstItem="bZY-Uv-5h9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dia-KO-Gy1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="6eV-G3-HNG">
                         <barButtonItem key="rightBarButtonItem" systemItem="camera" id="nc5-bw-cfT">
+                            <color key="tintColor" systemColor="labelColor"/>
                             <connections>
                                 <action selector="cameraButtonTapped:" destination="BYZ-38-t0r" id="lIf-Hg-k4J"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="extractLabel" destination="fmC-k2-yJF" id="62l-3f-DB8"/>
                         <outlet property="imageView" destination="QK3-dv-9vC" id="EU0-tn-Lty"/>
                     </connections>
                 </viewController>
@@ -52,6 +77,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="wyu-AT-Vi2">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.76508349180221558" green="0.92062145471572876" blue="0.61996281147003174" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -64,6 +90,9 @@
         </scene>
     </scenes>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
